gcc/testsuite/rust/rustc/ui/consts/issue-76064_dg.rs
struct Bug([u8; panic!("panic")]); // { dg-error ".E0080." "" { target *-*-* } }

fn main() {}

